--- a/index.html
+++ b/index.html
@@ -5,19 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Preentrega 2 Javascript</title>
+    <title>Preentrega 3 Javascript</title>
 </head>
 
 <body>
-    <h1><span>Preentrega 2 Javascript</span></h1>
-    <hr />
-    <h2>Introducción a Javascript</h2>
 
 
     <script>
 
     </script>
     <script src="./js/classes/classes.js"></script>
+    <script src="./js/views/vistas.js"></script>
+    <script src="./js/views/funcionUsuario.js"></script>
     <script src="./js/main.js"></script>
 
 </body>
